# econometrics

./: .env  .env.example  .gitignore  Dockerfile  README.md  clear.py  docker-compose.yml  form_101.py  names.py  pyproject.toml  simplify.py
app/: celery_app.py  cli.py  config.py  http_client.py  logging_utils.py  models.py  storage.py  store_provider.py  utils.py
app/parsers/: banks.py  report_page.py  reports_index.py
app/tasks/: aggregate.py  bootstrap.py  fetch.py  parse.py  resume.py
docs/: PERFORMANCE.md
scripts/: run_bootstrap.sh
